--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- <li> 12th pass</li> -->
                 <li>B.tech 2nd year </li>
                 <li>SSC and HSC from holy 
-                    mission senior secondry school:2012-2021
+                    mission senior secondary school:2012-2021
                 </li>
             </ul>
         </section>
